Add Ansible and Terraform configurations, validation scripts, and documentation updates
- Introduced .ansible-lint and .yamllint configurations for improved linting.
- Added .gitignore for Terraform and Ansible files.
- Created env-validate.sh for comprehensive validation of infrastructure components.
- Implemented Ansible playbooks for Oracle Cloud automation, including deployment and cleanup tasks.
- Updated README.md and added detailed documentation for validation and testing processes.
- Removed outdated architecture and migration guides to streamline documentation.
- Enhanced Terraform configurations for Always Free tier compliance and added validation outputs.

--- a/ansible/playbooks/setup-environment.yml
+++ b/ansible/playbooks/setup-environment.yml
@@ -1,31 +1,32 @@
 ---
 # Oracle Cloud Environment Setup Playbook
-# 🚨 ALWAYS FREE TIER PROTECTION: No sudo required, user-space installation
+# ALWAYS FREE TIER PROTECTION: No sudo required, user-space installation
 - name: Setup Oracle Cloud Development Environment
   hosts: localhost
   gather_facts: true
   vars:
     setup_log: "{{ logs_dir }}/setup-{{ ansible_date_time.epoch }}.log"
-    
+
   tasks:
     - name: Display Always Free Tier Protection Banner
-      debug:
+      ansible.builtin.debug:
         msg: |
-          ╔══════════════════════════════════════════════════════════════════╗
-          ║              Oracle Cloud Environment Setup                     ║
-          ║              🚨 ALWAYS FREE TIER PROTECTION 🚨                  ║
-          ║                                                                  ║
-          ║  ✅ No sudo privileges required                                  ║
-          ║  ✅ User-space installation only                                 ║
-          ║  ✅ Always Free tier validation                                  ║
-          ║  ✅ Zero-cost guarantee                                          ║
-          ╚══════════════════════════════════════════════════════════════════╝
+          +------------------------------------------------------------------+
+          |              Oracle Cloud Environment Setup                     |
+          |              ALWAYS FREE TIER PROTECTION                  |
+          |                                                                  |
+          |  [OK] No sudo privileges required                                  |
+          |  [OK] User-space installation only                                 |
+          |  [OK] Always Free tier validation                                  |
+          |  [OK] Zero-cost guarantee                                          |
+          |  [OK] Latest versions will be installed                            |
+          +------------------------------------------------------------------+
 
     - name: Create required directories
-      file:
+      ansible.builtin.file:
         path: "{{ item }}"
         state: directory
-        mode: '0755'
+        mode: "0755"
       loop:
         - "{{ local_bin_dir }}"
         - "{{ local_lib_dir }}"
@@ -34,149 +35,211 @@
         - "{{ oci_config_dir }}"
 
     - name: Check if running on supported OS
-      assert:
+      ansible.builtin.assert:
         that:
           - ansible_system in ['Linux', 'Darwin']
         fail_msg: "Unsupported OS: {{ ansible_system }}. Only Linux and macOS are supported."
-        success_msg: "✅ Supported OS detected: {{ ansible_system }}"
+        success_msg: "[OK] Supported OS detected: {{ ansible_system }}"
+
+    # Get latest Terraform version
+    - name: Get latest Terraform version
+      ansible.builtin.uri:
+        url: "https://api.github.com/repos/hashicorp/terraform/releases/latest"
+        method: GET
+        return_content: true
+      register: terraform_latest
+      when: terraform_version == "latest"
+      check_mode: false
+
+    - name: Set Terraform version to latest
+      ansible.builtin.set_fact:
+        terraform_version: "{{ terraform_latest.json.tag_name | regex_replace('^v', '') }}"
+      when: terraform_version == "latest" and terraform_latest is defined
+
+    - name: Set fallback Terraform version for check mode
+      ansible.builtin.set_fact:
+        terraform_version: "1.9.0"
+      when: terraform_version == "latest" and terraform_latest is not defined
+
+    - name: Display Terraform version to install
+      ansible.builtin.debug:
+        msg: "[INFO] Terraform version to install: {{ terraform_version }}"
 
     # Install Terraform without sudo
     - name: Check if Terraform is already installed
-      stat:
+      ansible.builtin.stat:
         path: "{{ local_bin_dir }}/terraform"
       register: terraform_binary
 
     - name: Get current Terraform version
-      command: "{{ local_bin_dir }}/terraform version -json"
+      ansible.builtin.command: "{{ local_bin_dir }}/terraform version -json"
       register: terraform_current_version
       failed_when: false
       changed_when: false
       when: terraform_binary.stat.exists
 
-    - name: Install Terraform (user-space)
+    - name: Install or update Terraform (user-space)
+      when: >
+        not terraform_binary.stat.exists or
+        (terraform_current_version.rc == 0 and
+         terraform_version not in terraform_current_version.stdout)
       block:
         - name: Download Terraform
-          get_url:
+          ansible.builtin.get_url:
             url: "https://releases.hashicorp.com/terraform/{{ terraform_version }}/terraform_{{ terraform_version }}_{{ ansible_system | lower }}_amd64.zip"
             dest: "/tmp/terraform_{{ terraform_version }}.zip"
-            mode: '0644'
-          
+            mode: "0644"
+
         - name: Extract Terraform
-          unarchive:
+          ansible.builtin.unarchive:
             src: "/tmp/terraform_{{ terraform_version }}.zip"
             dest: "{{ local_bin_dir }}"
             remote_src: true
-            mode: '0755'
-            
+            mode: "0755"
+
         - name: Cleanup Terraform download
-          file:
+          ansible.builtin.file:
             path: "/tmp/terraform_{{ terraform_version }}.zip"
             state: absent
-            
+
         - name: Verify Terraform installation
-          command: "{{ local_bin_dir }}/terraform version"
+          ansible.builtin.command: "{{ local_bin_dir }}/terraform version"
           register: terraform_verify
           changed_when: false
-          
-        - name: Display Terraform version
-          debug:
-            msg: "✅ Terraform installed: {{ terraform_verify.stdout_lines[0] }}"
-            
-      when: >
-        not terraform_binary.stat.exists or
-        (terraform_current_version.rc == 0 and 
-         terraform_version not in terraform_current_version.stdout)
 
-    # Install OCI CLI without sudo
+        - name: Display Terraform version
+          ansible.builtin.debug:
+            msg: "[OK] Terraform installed: {{ terraform_verify.stdout_lines[0] }}"
+      rescue:
+        - name: Display Terraform installation error
+          ansible.builtin.debug:
+            msg: |
+              [ERROR] Terraform installation failed!
+              Error details: {{ ansible_failed_result.msg | default('Unknown error') }}
+
+              Troubleshooting steps:
+              1. Check internet connectivity
+              2. Verify {{ local_bin_dir }} directory exists and is writable
+              3. Check if terraform_version variable is set correctly
+              4. Ensure /tmp directory has sufficient space
+
+        - name: Fail with Terraform installation error
+          ansible.builtin.fail:
+            msg: "Terraform installation failed. Please check the error details above and try again."
+
+    # Install OCI CLI without sudo (always install latest)
     - name: Check if OCI CLI is installed
-      command: which oci
+      ansible.builtin.command: which oci
       register: oci_cli_check
       failed_when: false
       changed_when: false
 
-    - name: Install OCI CLI (user-space via pip)
+    - name: Display OCI CLI version to install
+      ansible.builtin.debug:
+        msg: "[INFO] OCI CLI version to install: {{ oci_cli_version }}"
+
+    - name: Install or update OCI CLI (user-space via pip)
+      when: oci_cli_version == "latest"
       block:
         - name: Install OCI CLI using pip
-          pip:
+          ansible.builtin.pip:
             name: oci-cli
             state: present
             extra_args: --user
           environment:
             PATH: "{{ ansible_env.PATH }}:{{ ansible_env.HOME }}/.local/bin"
-            
+
         - name: Verify OCI CLI installation
-          command: "{{ ansible_env.HOME }}/.local/bin/oci --version"
+          ansible.builtin.command: "{{ ansible_env.HOME }}/.local/bin/oci --version"
           register: oci_verify
           changed_when: false
-          
+
         - name: Display OCI CLI version
-          debug:
-            msg: "✅ OCI CLI installed: {{ oci_verify.stdout }}"
-            
-      when: oci_cli_check.rc != 0
+          ansible.builtin.debug:
+            msg: "[OK] OCI CLI installed: {{ oci_verify.stdout }}"
+      rescue:
+        - name: Display OCI CLI installation error
+          ansible.builtin.debug:
+            msg: |
+              [ERROR] OCI CLI installation failed!
+              Error details: {{ ansible_failed_result.msg | default('Unknown error') }}
+
+              Troubleshooting steps:
+              1. Check internet connectivity
+              2. Ensure pip is installed and working
+              3. Verify {{ ansible_env.HOME }}/.local/bin directory exists
+              4. Check Python version compatibility
+              5. Try manual installation: pip install --user oci-cli
+
+        - name: Fail with OCI CLI installation error
+          ansible.builtin.fail:
+            msg: "OCI CLI installation failed. Please check the error details above and try again."
 
     # Update PATH for current session
     - name: Add local bin to PATH
-      lineinfile:
+      ansible.builtin.lineinfile:
         path: "{{ ansible_env.HOME }}/.bashrc"
         line: 'export PATH="$HOME/.local/bin:$PATH"'
         create: true
         backup: true
+        mode: "0644"
       when: ansible_env.SHELL | basename == 'bash'
 
     - name: Add local bin to PATH (zsh)
-      lineinfile:
+      ansible.builtin.lineinfile:
         path: "{{ ansible_env.HOME }}/.zshrc"
         line: 'export PATH="$HOME/.local/bin:$PATH"'
         create: true
         backup: true
+        mode: "0644"
       when: ansible_env.SHELL | basename == 'zsh'
 
     # Validate installation
     - name: Test OCI CLI functionality
-      command: "{{ ansible_env.HOME }}/.local/bin/oci iam region list"
+      ansible.builtin.command: "{{ ansible_env.HOME }}/.local/bin/oci iam region list"
       register: oci_test
       failed_when: false
       changed_when: false
 
     - name: Display OCI CLI status
-      debug:
+      ansible.builtin.debug:
         msg: |
           {% if oci_test.rc == 0 %}
-          ✅ OCI CLI is working and connected
+          [OK] OCI CLI is working and connected
           {% else %}
-          ⚠️  OCI CLI installed but needs configuration
+          [WARNING]  OCI CLI installed but needs configuration
           Run: oci setup config
           {% endif %}
 
     # Create configuration template
     - name: Check if terraform.tfvars exists
-      stat:
+      ansible.builtin.stat:
         path: "{{ config_dir }}/terraform.tfvars"
       register: tfvars_file
 
     - name: Copy terraform.tfvars template
-      copy:
+      ansible.builtin.copy:
         src: "{{ config_dir }}/terraform.tfvars.example"
         dest: "{{ config_dir }}/terraform.tfvars"
         backup: true
+        mode: "0644"
       when: not tfvars_file.stat.exists
 
     - name: Display setup completion
-      debug:
+      ansible.builtin.debug:
         msg: |
-          ╔══════════════════════════════════════════════════════════════════╗
-          ║                    🎉 SETUP COMPLETED! 🎉                       ║
-          ║              No sudo privileges required!                       ║
-          ║                                                                  ║
-          ║  ✅ Terraform installed to ~/.local/bin/                        ║
-          ║  ✅ OCI CLI installed via pip --user                            ║
-          ║  ✅ PATH updated in shell configuration                         ║
-          ║  ✅ Always Free tier protection enabled                         ║
-          ║                                                                  ║
-          ║  Next steps:                                                     ║
-          ║  1. Restart terminal or run: source ~/.bashrc                   ║
-          ║  2. Configure OCI: oci setup config                             ║
-          ║  3. Edit terraform/terraform.tfvars with your details          ║
-          ║  4. Run: ansible-playbook deploy-database.yml                   ║
-          ╚══════════════════════════════════════════════════════════════════╝
+          +------------------------------------------------------------------+
+          |                    [SUCCESS] SETUP COMPLETED! [SUCCESS]                       |
+          |              No sudo privileges required!                       |
+          |                                                                  |
+          |  [OK] Terraform installed to ~/.local/bin/                        |
+          |  [OK] OCI CLI installed via pip --user                            |
+          |  [OK] PATH updated in shell configuration                         |
+          |  [OK] Always Free tier protection enabled                         |
+          |                                                                  |
+          |  Next steps:                                                     |
+          |  1. Restart terminal or run: source ~/.bashrc                   |
+          |  2. Configure OCI: oci setup config                             |
+          |  3. Edit terraform/terraform.tfvars with your details          |
+          |  4. Run: ansible-playbook deploy-database.yml                   |
+          +------------------------------------------------------------------+
