--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,25 +1,73 @@
 [defaults]
-# Ansible configuration for Oracle Cloud automation
+# ============================================================================
+# Ansible Configuration - Oracle Cloud Infrastructure Automation
+# ============================================================================
+
+# Inventory configuration
 inventory = inventory/localhost.yml
+
+# Connection settings
 host_key_checking = False
-retry_files_enabled = False
+timeout = 30
+
+# Performance optimizations
 gathering = smart
-fact_caching = memory
+fact_caching = jsonfile
+fact_caching_connection = .ansible/facts
+fact_caching_timeout = 3600
+inject_facts_as_vars = True
+
+# Retry and error handling
+retry_files_enabled = False
+error_on_undefined_vars = True
 
 # No privilege escalation needed
 become = False
 
-# Use local connection for setup tasks
+# Connection type
 transport = local
 
-# Logging
+# Output and logging
 log_path = ../logs/ansible.log
 display_skipped_hosts = False
 display_ok_hosts = True
+display_args_to_stdout = False
+deprecation_warnings = True
+command_warnings = True
+system_warnings = True
+callbacks_enabled = ansible.posix.profile_tasks, ansible.posix.timer
+
+# Output formatting
+force_color = True
+nocows = True
+stdout_callback = default
+
+# Collections
+collections_path = ~/.ansible/collections:/usr/share/ansible/collections
 
 [inventory]
-enable_plugins = yaml
+enable_plugins = yaml, ini, auto
+
+[privilege_escalation]
+become = False
+become_method = sudo
+become_user = root
 
 [ssh_connection]
 ssh_args = -o ControlMaster=auto -o ControlPersist=60s
 pipelining = True
+
+[colors]
+highlight = white
+verbose = blue
+warn = bright purple
+error = red
+debug = dark gray
+deprecate = purple
+skip = cyan
+unreachable = red
+ok = green
+changed = yellow
+diff_add = green
+diff_remove = red
+diff_lines = cyan
