--- a/ansible/playbooks/deploy-complete-suite.yml
+++ b/ansible/playbooks/deploy-complete-suite.yml
@@ -6,59 +6,59 @@
   gather_facts: true
   vars:
     orchestration_log: "{{ logs_dir }}/orchestration-{{ ansible_date_time.epoch }}.log"
-    
+
   tasks:
     - name: Display Orchestration Banner
-      debug:
+      ansible.builtin.debug:
         msg: |
-          ╔══════════════════════════════════════════════════════════════════╗
-          ║        Oracle Partition Management Suite - Full Deployment      ║
-          ║              🚨 ALWAYS FREE TIER PROTECTION 🚨                  ║
-          ║                                                                  ║
-          ║  This orchestrator manages the complete deployment lifecycle:    ║
-          ║  🏗️  Infrastructure provisioning (Terraform)                    ║
-          ║  🛠️  Environment setup (Ansible)                                ║
-          ║  📦 Application deployment (Ansible)                            ║
-          ║  ✅ Validation and testing (Ansible)                            ║
-          ╚══════════════════════════════════════════════════════════════════╝
+          +------------------------------------------------------------------+
+          |        Oracle Partition Management Suite - Full Deployment      |
+          |              ALWAYS FREE TIER PROTECTION ALWAYS FREE TIER PROTECTION ALWAYS FREE TIER PROTECTION                  |
+          |                                                                  |
+          |  This orchestrator manages the complete deployment lifecycle:    |
+          |  [BUILD]  Infrastructure provisioning (Terraform)                    |
+          |  [TOOLS]  Environment setup (Ansible)                                |
+          |  [PACKAGE] Application deployment (Ansible)                            |
+          |  [OK] Validation and testing (Ansible)                            |
+          +------------------------------------------------------------------+
 
-    # Phase 1: Environment Setup
-    - name: "Phase 1: Setup Development Environment"
-      include_tasks: setup-environment.yml
+    # Phase 1: Local Environment Setup
+    - name: "Phase 1: Setup Local Environment"
+      ansible.builtin.include_tasks: setup-environment.yml
       tags: [environment, setup]
 
     # Phase 2: Infrastructure Provisioning (Terraform)
     - name: "Phase 2: Provision Cloud Infrastructure"
-      include_tasks: provision-infrastructure.yml
+      ansible.builtin.include_tasks: tasks/provision-infrastructure.yml
       tags: [infrastructure, terraform]
 
     # Phase 3: Application Configuration
     - name: "Phase 3: Configure Database Environment"
-      include_tasks: configure-database.yml
+      ansible.builtin.include_tasks: tasks/configure-database.yml
       tags: [configuration, database]
 
     # Phase 4: Application Deployment
     - name: "Phase 4: Deploy Oracle Packages"
-      include_tasks: deploy-packages.yml
+      ansible.builtin.include_tasks: tasks/deploy-packages.yml
       tags: [deployment, packages]
 
     # Phase 5: Data and Testing
     - name: "Phase 5: Load Test Data and Validate"
-      include_tasks: test-and-validate.yml
+      ansible.builtin.include_tasks: tasks/test-and-validate.yml
       tags: [testing, validation]
 
     # Final Summary
     - name: Display Deployment Completion
-      debug:
+      ansible.builtin.debug:
         msg: |
-          ╔══════════════════════════════════════════════════════════════════╗
-          ║               🎉 DEPLOYMENT COMPLETED! 🎉                       ║
-          ║                                                                  ║
-          ║  ✅ Infrastructure: Oracle Cloud resources provisioned          ║
-          ║  ✅ Configuration: Database environment configured              ║
-          ║  ✅ Application: Partition management suite deployed            ║
-          ║  ✅ Testing: Validation tests completed                         ║
-          ║                                                                  ║
-          ║  💰 Cost: $0.00 (Always Free tier)                              ║
-          ║  🚀 Ready for production use!                                    ║
-          ╚══════════════════════════════════════════════════════════════════╝
+          +------------------------------------------------------------------+
+          |               [SUCCESS] DEPLOYMENT COMPLETED! [SUCCESS]                       |
+          |                                                                  |
+          |  [OK] Infrastructure: Oracle Cloud resources provisioned          |
+          |  [OK] Configuration: Database environment configured              |
+          |  [OK] Application: Partition management suite deployed            |
+          |  [OK] Testing: Validation tests completed                         |
+          |                                                                  |
+          |  [COST] Cost: $0.00 (Always Free tier)                              |
+          |  [DEPLOY] Ready for production use!                                    |
+          +------------------------------------------------------------------+
