--- a/.gitignore
+++ b/.gitignore
@@ -49,7 +49,4 @@ id_dsa
 *.tmp
 *.temp
 .cache/
-.specstory
-.specstory/history
-.specstory/.what-is-this.md
-.specstory/.what-is-this.md
+.specstory/
