docs: consolidate USAGE.md into README.md
- Integrated role-based architecture documentation
- Added migration guide for old playbook users
- Enhanced Quick Start with proper virtual environment setup
- Added tag-based execution examples
- Included variable namespacing changes (oracle_ prefix)
- Updated all command examples to use new role structure
- Removed redundant USAGE.md file

Documentation now provides complete coverage in single README.md

--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -32,6 +32,19 @@ lint:
     - linters: [markdownlint]
       paths:
         - .specstory/**
+  definitions:
+    - name: ansible-lint
+      files: [yaml]
+      commands:
+        - output: regex
+          target: ${target}
+          run: ansible-lint --config-file .trunk/configs/.ansible-lint ${target}
+    - name: yamllint
+      files: [yaml]
+      commands:
+        - output: regex
+          target: ${target}
+          run: yamllint --config-file .trunk/configs/.yamllint ${target}
 actions:
   disabled:
     - trunk-announce
